--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ ubuntu-18.04, ubuntu-20.04 ]
-        php: [ '7.1', '7.2', '7.3', '7.4', '7.3.3' ]
+        operating-system: [ ubuntu-20.04 ]
+        php: [ '7.3', '7.4']
     name: PHP ${{ matrix.php }} API Test
     steps:
       - uses: actions/checkout@v2.3.4
