--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ ubuntu-20.04 ]
-        php: [ '7.3', '7.4']
+        php: ['7.4']
     name: PHP ${{ matrix.php }} API Test
     steps:
       - uses: actions/checkout@v2.3.4
